Fixed the 780px gap size

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,8 @@ button {
   }
   .form {
     justify-content: center;
-    gap: 10px;
+    gap: 15px;
+    margin-top: -10px;
   }
   .layout {
     display: flex;
